src/objects/Project_Relationship__c.object
<CustomObject>
    <description>MG_Project Relationship</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Study Relationships</relationshipLabel>
        <relationshipName>Project_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <label>Study</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipLabel>Project Relationships</relationshipLabel>
        <relationshipName>Project_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Project Relationship</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Project Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>